--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,13 @@
 @import "./base/reset";
 @import "./components/header";
 @import "./components/carousel";
+@import "./components/courses";
+@import "./components/intro";
+@import "./components/bestseller";
+@import "./components/recommend";
+@import "./components/category";
+@import "./components/student";
+@import "./components/footer";
 @import "./layout/home";
 
 
