--- a/scss/helper/_mixin.scss
+++ b/scss/helper/_mixin.scss
@@ -1,149 +1,141 @@
-@mixin form($bg) {
-	.input-group {
-		border: 1px solid #00000026;
-		border-radius: 3px;
-		overflow: hidden;
-		// background-color: ;
-		.form-control {
-			border: transparent;
-			background-color: $bg;
-			&:focus {
-				box-shadow: none;
-			}
-		}
-		span {
-			color: $color-red;
-			width: 2.5rem;
-			justify-content: center;
-			align-items: center;
-			border: transparent;
-			background-color: $bg;
-			&:hover {
-				background-color: $color-red;
-				color: white;
-			}
-			i {
-				font-size: 0.8rem;
-			}
-		}
-	}
+@mixin styleText($color, $fs, $fw) {
+    color: $color;
+    font-size: $fs;
+    font-weight: $fw;
 }
 
-@mixin search() {
-	form {
-		flex-grow: 5;
-		background-color: whitesmoke;
-		.input-group {
-			border: 1px solid #00000026;
-		}
-		i {
-			color: #e40cd4;
-			padding: 0.8rem;
-			transition: 0.5s;
-			cursor: pointer;
-			background-color: transparent;
-			&:hover {
-				background: red;
-				color: $color-white;
-			}
-			//   &:focus {
-			//     box-shadow: none;
-			//   }
-		}
-		input {
-			border: transparent;
-			background-color: transparent;
-			&:focus {
-				box-shadow: none;
-			}
-		}
-	}
+@mixin search_box($fs, $bg-color, $border-color , $height, $fs-icon) {
+    .input-group {
+        .form-control {
+            // border: none;
+            background-color: $bg-color;
+            transition: none;
+            font-size: $fs;
+            border-bottom-left-radius: $border-radius;
+            border-top-left-radius: $border-radius;
+            height: $height;   
+            padding: 10px 12px;
+
+            border-bottom: 1px solid $bg-color;
+            border-top: 1px solid $bg-color;
+            border-left: 1px solid $bg-color;
+            border-right: 1px solid $bg-color;
+
+            &:focus {
+                box-shadow: none;
+                background-color: $color-white-0;
+                border-bottom: 1px solid $border-color;
+                border-top: 1px solid $border-color;
+                border-left: 1px solid $border-color;  
+                border-right: none; 
+            }
+            &:focus + .input-group-prepend {
+                .input-group-text {
+                    background-color: $color-white-0;
+                    border-bottom: 1px solid $border-color;
+                    border-top: 1px solid $border-color;
+                    border-right: 1px solid $border-color;
+                    
+                }
+                &:hover {
+                    .input-group-text {
+                        font-size: $fs-icon;
+                        color: $color-white-0;
+                        background-color: $color-red-0;
+                        cursor: pointer;
+                    }       
+                }
+            }
+            
+        }
+
+        .input-group-prepend {
+            margin: 0;  
+            .input-group-text {
+                font-size: $fs-icon;
+
+                border-bottom-right-radius: $border-radius;
+                border-top-right-radius: $border-radius;
+                color: $color-red-0;
+                // border: none;
+
+                background-color: $bg-color;
+                border-bottom: 1px solid transparent;
+                border-top: 1px solid transparent;
+                border-right: 1px solid transparent;
+                border-left: none;
+            
+                &:hover {
+                    font-size: $fs-icon;
+                    color: $color-white-0;
+                    background-color: $color-red-0;
+                    cursor: pointer;
+                }
+            
+
+            }
+        }
+    
+    }
+    
 }
 
-@mixin star() {
-	.item {
-		margin-bottom: 1.5rem;
-		height: 22rem;
-	}
-	.info {
-		.vote {
-			i {
-				color: #dedfe0;
-				font-size: 0.685rem;
-			}
-			.rate {
-				position: absolute;
-				top: 0;
-				left: 0;
-				i {
-					color: #f4c150;
-					font-size: 0.685rem;
-				}
-				i:nth-child(5)::before {
-					color: #f4c150;
-					content: "\f089";
-				}
-			}
-		}
-		padding: 1rem 0.626rem 0 1rem;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		b {
-			font-size: 0.825rem;
-			margin-bottom: 1rem;
-		}
-		p,
-		span {
-			font-size: 0.75rem;
-			margin-bottom: 0;
-		}
-		.cost {
-			span {
-				font-size: 0.75rem;
-				text-decoration: line-through;
-			}
-			b {
-				font-size: 1.25rem;
-			}
-		}
-	}
+@mixin styleButton($bg-color, $border-color, $radius, $py, $px) {
+    background-color: $bg-color;
+    border: 1px solid $border-color;
+    border-radius: $radius;
+    padding: $py $px;
 }
 
-@mixin hover-item {
-	.border {
-		box-shadow: 0 0 1px 1px rgba(20, 23, 28, 0.1),
-			0 3px 1px 0 rgba(20, 23, 28, 0.1);
-	}
-	.item:hover {
-		cursor: pointer;
-		box-shadow: 0 2px 8px 2px rgba(20, 23, 28, 0.15);
-		img {
-			opacity: 0.7;
-		}
-	}
+@mixin styleHoverButton($bg-color, $border-color, $color){
+    background-color: $bg-color ;
+    border-color: $border-color ;
+    color: $color ;
 }
-@mixin star-respon() {
-	.info {
-		> b {
-			font-size: 0.75rem;
-		}
-		p {
-			font-size: 0.675rem;
-		}
-		.vote i,
-		.vote b,
-		.vote span,
-		.vote .rate i {
-			font-size: 0.5rem;
-		}
-		.cost {
-			span {
-				font-size: 0.75rem;
-			}
-			b {
-				font-size: 0.8725rem;
-			}
-		}
-	}
+
+
+@mixin styleButton($bg-color, $border-color, $radius, $py, $px) {
+    background-color: $bg-color;
+    border: 1px solid $border-color;
+    border-radius: $radius;
+    padding: $py $px;
+}
+
+@mixin styleHoverButton($bg-color, $border-color, $color){
+    background-color: $bg-color;
+    border-color: $border-color;
+    color: $color;
+}
+
+@mixin itemSclick(){
+    &:hover {
+        content: "";
+        position: absolute;
+        top:0 ;
+        left: 0;
+        width: 100%;
+        height: 100%; 
+        transition: .2s ease;
+        pointer-events: none;
+        opacity: 0;
+    }
+
+    &:hover + &:before{
+        opacity: 1;
+    }
+
+}
+
+
+
+// $screen: chua ten man hinh
+@mixin responsive($screen) {
+    @if(map-has-key($map:$breakpoints, $key:$screen)) {
+        $value: map-get($map:$breakpoints, $key:$screen);
+        @media screen and (max-width:$value){
+            @content;
+        }
+    } @else {
+        @warn "Ten man hinh khng hop le!";
+    }
 }
